2004-06-30  John Luke  <jluke@cfl.rr.com>

	* Glue.cs: add IsGtk24 property for potential FileChooser hack
	* MonoDevelop.Gui.Utils.dll.config: add gtk config mapping

2004-05-28  Todd Berman  <tberman@sevenl.net>

	* MonoDevelop.Gui.Utils.prjx: update to new ICSharpCode.SharpZipLib

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* VFS/Vfs.cs: change string marshalling to make things not leak.

2004-04-12  Kristian Rietveld  <kris@gtk.org>

	* FileIcons/FileIconLoader.cs: if LookupIcon returns an empty string,
	but doesn't throw an exception, also return a pixbuf of
	gnome-fs-regular.

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* FileIcons/FileIconLoader.cs: fix from richard torkar to workaround a
	strange Gnome issue.

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* VFS/Vfs.cs: Added new code from Dashboard to provide a different
	external app identification mechanism.